CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(LeetCode)
set(CMAKE_CXX_STANDARD 14)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(Ex53_MaximumSubarray)
ADD_SUBDIRECTORY(Ex54_SpiralMatrix)
ADD_SUBDIRECTORY(Ex55_JumpGame)
ADD_SUBDIRECTORY(Ex56_MergeIntervals)
ADD_SUBDIRECTORY(Ex58_LengthOfLastWord)
ADD_SUBDIRECTORY(Ex59_SpiralMatrixII)
ADD_SUBDIRECTORY(Ex60_PermutationSequence)
ADD_SUBDIRECTORY(Ex61_RotateList)