CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(LeetCode)
set(CMAKE_CXX_STANDARD 14)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(Ex53_MaximumSubarray)
ADD_SUBDIRECTORY(Ex54_SpiralMatrix)
ADD_SUBDIRECTORY(Ex55_JumpGame)
ADD_SUBDIRECTORY(Ex56_MergeIntervals)
ADD_SUBDIRECTORY(Ex58_LengthOfLastWord)
ADD_SUBDIRECTORY(Ex59_SpiralMatrixII)
ADD_SUBDIRECTORY(Ex60_PermutationSequence)
ADD_SUBDIRECTORY(Ex61_RotateList)
ADD_SUBDIRECTORY(Ex62_UniquePaths)
ADD_SUBDIRECTORY(Ex63_UniquePathsII)
ADD_SUBDIRECTORY(Ex64_MinimumPathSum)
ADD_SUBDIRECTORY(Ex66_PlusOne)
ADD_SUBDIRECTORY(Ex67_AddBinary)
ADD_SUBDIRECTORY(Ex69_SqrtX)
ADD_SUBDIRECTORY(Ex70_ClimbingStairs)
ADD_SUBDIRECTORY(Ex71_SimplifyPath)
add_subdirectory(Ex73_SetMatrixZeroes)
ADD_SUBDIRECTORY(Ex74_SearchA2DMatrix)
ADD_SUBDIRECTORY(Ex75_SortColors)
ADD_SUBDIRECTORY(Ex77_Combinations)
ADD_SUBDIRECTORY(Ex78_Subsets)
ADD_SUBDIRECTORY(Ex79_WordSearch)
ADD_SUBDIRECTORY(Ex80_RemoveDuplicatesfromSortedArrayII)
ADD_SUBDIRECTORY(Ex81_SearchInRotatedSortedArrayII)
ADD_SUBDIRECTORY(Ex82_RemoveDuplicatesfromSortedListII)